--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "electron": "26.2.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.30",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.3",
+    "postcss-url": "^10.1.3",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "svelte": "^4.2.0",
     "svelte-loader": "^3.1.9",
     "svelte-preprocess": "^5.0.4",
-    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
