--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@electron-forge/plugin-webpack": "^6.4.2",
     "@electron-forge/shared-types": "^6.4.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "^20.8.0",
+    "@types/webpack": "^5.28.3",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
@@ -35,6 +37,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.30",
+    "postcss-import": "^15.1.0",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.3",
     "postcss-url": "^10.1.3",
@@ -45,6 +48,7 @@
     "svelte-loader": "^3.1.9",
     "svelte-preprocess": "^5.0.4",
     "ts-loader": "^9.4.4",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
