--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "main": "folder-app",
     "renderer": "folder-layout"
   },
-  "css.customData": [".vscode/css_custom_data.json"]
+  "css.customData": [".vscode/css_custom_data.json"],
+  "eslint.validate": ["javascript", "svelte", "typescript"]
 }
