--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "package": "cross-env NODE_ENV=production electron-forge package",
     "make": "electron-forge make",
     "buildnstart": "npx webpack && electron-forge start",
-    "build": "npx webpack"
+    "build": "npx webpack",
+    "dev": "electron-forge start",
+    "format": "yarn eslint --fix --ext .js,.ts,.svelte src/ && yarn prettier . --write",
+    "lint": "yarn eslint --ext .js,.ts,.svelte src/"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
@@ -29,11 +32,15 @@
     "@tsconfig/svelte": "^5.0.2",
     "@types/node": "^20.8.0",
     "@types/webpack": "^5.28.3",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "autoprefixer": "^10.4.15",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "electron": "26.2.1",
+    "eslint": "^8.51.0",
+    "eslint-plugin-svelte": "^2.34.0",
     "mini-css-extract-plugin": "^2.7.6",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.30",
@@ -41,10 +48,14 @@
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.3",
     "postcss-url": "^10.1.3",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.68.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "svelte": "^4.2.0",
+    "svelte-icon": "^2.0.0",
     "svelte-loader": "^3.1.9",
     "svelte-preprocess": "^5.0.4",
     "ts-loader": "^9.4.4",
