--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "svelte": "^4.2.0",
+    "svelte-dnd-action": "^0.9.31",
     "svelte-icon": "^2.0.0",
     "svelte-loader": "^3.1.9",
     "svelte-preprocess": "^5.0.4",
